--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f33bcd17d16347ecbc60f67d92d29dc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -24,7 +39,7 @@
     "\n",
     "# Create the page\n",
     "%run template1panel.py\n",
-    "p = template1panel(output, leftWidth=900)\n",
+    "p = template1panel(output, leftWidth=0)\n",
     "card = p.create()\n",
     "\n",
     "#p.titlecolor  = '#ccaaaa'\n",
