Added icon property to iconButton

--- a/src/vois/vuetify/Tests/iconButtonTest.ipynb
+++ b/src/vois/vuetify/Tests/iconButtonTest.ipynb
@@ -2,28 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "68885700",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba21f7b0dcce463d8a30c0f924655745",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Item(children=[Tooltip(bottom=True, children=['Test string for tooltip'], color='#999999', layo…"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../iconButton.py\n",
     "\n",
@@ -31,17 +15,19 @@
     "    if b.color == 'red':\n",
     "        b.color = 'amber'\n",
     "        b.tooltip = 'Make the icon red'\n",
+    "        b.icon = 'mdi-pause'\n",
     "    else:\n",
     "        b.color = 'red'\n",
     "        b.tooltip = 'Make the icon yellow'\n",
+    "        b.icon = 'mdi-pause'\n",
     "\n",
-    "b = iconButton(onclick=onclick, tooltip='Test string for tooltip', outlined=True, rounded=True, small=False) #, width=80)\n",
+    "b = iconButton(icon='mdi-play', onclick=onclick, tooltip='Test string for tooltip', outlined=True, rounded=True, small=False) #, width=80)\n",
     "b.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4ee8ce35",
    "metadata": {
     "tags": []
@@ -55,6 +41,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d261cbd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.icon = 'mdi-alert'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da90e410-8717-4cd4-8b38-abf6278275c9",
    "metadata": {},
    "outputs": [],
    "source": []
