--- a/src/vois/vuetify/Tests/datatableTest.ipynb
+++ b/src/vois/vuetify/Tests/datatableTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ac6cea2-4314-421f-96fb-71fd83c9162c",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "066eba1e",
    "metadata": {
     "tags": []
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d330eef",
    "metadata": {
     "tags": []
@@ -40,28 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "364ca7d1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bee575962eb4d9288ecc8d5ca4bf345",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "datatable(color='green', dark=True, events=['cell_click', 'onicon'], font_size='12px', font_size_title='18px',…"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vois.vuetify import datatable\n",
     "\n",
@@ -82,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "469ced00",
    "metadata": {
     "tags": []
@@ -94,43 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a7517300",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26bc2e1b82ad42498eb45bc101d35e02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "datatable(color='green', dark=True, events=['cell_click', 'onicon'], font_size='12px', font_size_title='18px',…"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "%run ../datatable.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "def on_click(data):\n",
+    "    print(data)\n",
+    "\n",
+    "    \n",
     "df = pd.DataFrame(np.random.random((5,20)))\n",
     "df.columns = ['C%d'%x for x in df.columns]\n",
-    "d = datatable.datatable(data=df, height='200px', color='green', dark=True,\n",
-    "              title='Randon numeric data', font_size='12px', font_size_title='18px', )\n",
+    "d = datatable(data=df, height='200px', color='green', dark=True,\n",
+    "              title='Randon numeric data', font_size='12px', font_size_title='18px', on_click=on_click)\n",
     "d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ad117d",
+   "id": "9a351678-1d3a-4290-a218-72d8457b8eab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
