--- a/src/vois/vuetify/Tests/iconButtonTest.ipynb
+++ b/src/vois/vuetify/Tests/iconButtonTest.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "68885700",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14d4ac0e4d4e4429b90de6b64ab87a57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Item(children=[Tooltip(bottom=True, children=['Test string for tooltip'], color='#999999', layo…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run ../iconButton.py\n",
     "\n",
@@ -27,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ee8ce35",
    "metadata": {
     "tags": []
