Added params to textpopup

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9c8b0e73",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58053a7cca2042e8b4751d149d9b4ac2",
+       "model_id": "314aa76cc24f476bac5f0a09ca211254",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,35 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14d62d7e3a3443618a9e94f020ed5815",
+       "model_id": "2be38ca5909a40ad854f36a8282c0eba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.jp-OutputPrompt {\\n    flex: 0 0 0 !important;\\n    display: inline !important;\\n    min…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b64ba8a3fca0401ebcffb4e0bf590daf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n.leaflet-popup-tip {\\n    width: 17px !important;\\n    height: 17px !important;\\n    pa…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6b52da5003e43318c06be79926dd62f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99ff3ddcbd2f4cfbb349322f91d89547",
+       "model_id": "bc704c7d9a78447183248e9a86ee65c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +75,7 @@
        "Map(center=[50, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,6 +83,8 @@
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from ipyleaflet import Popup\n",
     "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
@@ -69,17 +99,20 @@
     "display(output)\n",
     "\n",
     "from vois import cssUtils\n",
-    "cssUtils.switchFontSize(output,14)\n",
+    "cssUtils.allSettings()\n",
+    "#cssUtils.switchFontSize(output,14)\n",
     "\n",
     "debug = widgets.Output()\n",
     "display(debug)\n",
     "\n",
     "def onclick(m, lon,lat,zoom):\n",
-    "    with debug:\n",
-    "        print(lon,lat,zoom)\n",
+    "    message = widgets.HTML()\n",
+    "    message.value = \"<style> p.small {line-height: 1.2; }</style><p class=\\\"small\\\">\" + '%f %f %f'%(lon,lat,zoom) + \"</p>\"\n",
+    "    popup = Popup(location=[lat,lon],child=message, close_button=True,auto_close=True,close_on_escape_key=True)\n",
+    "    m.add_layer(popup)    \n",
     "\n",
     "%run Map.py\n",
-    "m = Map(show_overview=True, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
+    "m = Map(show_overview=True, show_coordinates=True, basemapindex=1, onclick=onclick)\n",
     "\n",
     "#m.add(ipyleaflet.TileLayer(url='https://server.arcgisonline.com/ArcGIS/rest/services/Ocean/World_Ocean_Base/MapServer/tile/{z}/{y}/{x}'))\n",
     "m.add(ipyleaflet.TileLayer(url='https://tiles.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
