--- a/src/vois/vuetify/Tests/cardTest.ipynb
+++ b/src/vois/vuetify/Tests/cardTest.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "66056c12",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d40cd1dcb84b4199bf9883590ebfed13",
+       "model_id": "55fe3a4988e444a8a959686e16f94fe1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff4393cc26cd4d608e143766f8a34d29",
+       "model_id": "2ddcadfc845e49048bc812b1ea8de7cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +38,7 @@
     }
    ],
    "source": [
-    "%run card.py\n",
+    "%run ../card.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -205,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -219,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
