--- a/src/vois/vuetify/Tests/sortableListTest.ipynb
+++ b/src/vois/vuetify/Tests/sortableListTest.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3aca41d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15dd99c3de924f6cb94cb7396400084c",
+       "model_id": "de498a13b8ca4073bdeb87cb1baad4ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -17,13 +19,16 @@
        "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Btn(children=[Ic…"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Simple example\n",
-    "%run sortableList.py\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import sortableList\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -51,8 +56,8 @@
     "def itemActivated(index):\n",
     "    print(s.items[index])\n",
     "    \n",
-    "s = sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent,\n",
-    "                activatable=False, onactivated=itemActivated)\n",
+    "s = sortableList.sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent,\n",
+    "                              activatable=False, onactivated=itemActivated)\n",
     "s.draw()"
    ]
   },
@@ -79,16 +84,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ea636a3a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0c838180d19445084b9ca07d13b5764",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Item(children=[T…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d3f0af483584bd59a7aababd2d5ad0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Sortable list with complex content\n",
-    "%run switch.py\n",
-    "%run datePicker.py\n",
-    "%run sortableList.py\n",
-    "%run tooltip.py\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import sortableList, switch, datePicker, tooltip\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -127,7 +162,7 @@
     "def itemContent(item, index):\n",
     "    \n",
     "    def onname(widget, event, data):\n",
-    "        item[\"name\"] = int(data)\n",
+    "        item[\"name\"] = data\n",
     "    \n",
     "    def onsurname(widget, event, data):\n",
     "        item[\"surname\"] = data\n",
@@ -148,9 +183,9 @@
     "    tfsurname = v.TextField(label='Surname:', value=item['surname'], color='amber', dense=True, style_=\"max-width: 100px\", class_=\"pa-0 ma-0 mt-2\")\n",
     "    tfsurname.on_event('input', onsurname)\n",
     "    \n",
-    "    sw = switch(item['married'], \"Married\", onchange=onmarried)\n",
+    "    sw = switch.switch(item['married'], \"Married\", onchange=onmarried)\n",
     "    \n",
-    "    dp = datePicker(date=item['date'], dark=dark, width=88, onchange=ondate, offset_x=True, offset_y=False)\n",
+    "    dp = datePicker.datePicker(date=item['date'], dark=dark, width=88, onchange=ondate, offset_x=True, offset_y=False)\n",
     "    dp.disabled = not item['married']\n",
     "    \n",
     "    sp = v.Html(tag='div', class_=\"pa-0 ma-0 mr-3\", children=[''])\n",
@@ -158,10 +193,10 @@
     "    return [ v.Row(class_=\"pa-0 ma-0 ml-2\", no_gutters=True, children=[tfname, sp, tfsurname, sp, sw.draw(), sp, dp.draw()]) ]\n",
     "\n",
     "\n",
-    "s = sortableList(items=items, width=520, outlined=False, dark=dark,\n",
-    "                 allowNew=True, itemNew=itemNew, itemContent=itemContent,\n",
-    "                 bottomContent=[tooltip(\"Remove all persons\",reset)],\n",
-    "                 onchange=onchange, buttonstooltip=True)\n",
+    "s = sortableList.sortableList(items=items, width=520, outlined=False, dark=dark,\n",
+    "                              allowNew=True, itemNew=itemNew, itemContent=itemContent,\n",
+    "                              bottomContent=[tooltip.tooltip(\"Remove all persons\",reset)],\n",
+    "                              onchange=onchange, buttonstooltip=True)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -178,14 +213,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a07f5208",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9743e9dd80ec4d7d86d1cfdcc647f672",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Item(children=[T…"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Simple example with one of the item always active\n",
-    "%run sortableList.py\n",
-    "%run tooltip.py\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import sortableList, tooltip\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -247,10 +301,10 @@
     "    if s.active < 0:\n",
     "        s.active = 0   # keep an item active!\n",
     "        \n",
-    "s = sortableList(items=items, width=400, maxheightlist=900, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, itemContent=itemContent,\n",
-    "                 bottomContent=[tooltip(\"Remove all layers\",reset)], buttonstooltip=True, onremoving=onremoving, onremoved=onremoved, onadded=onadded,\n",
-    "                 tooltipadd='Add new layer', tooltipdown='Move layer down', tooltipup='Move layer up', tooltipremove='Remove layer',\n",
-    "                 activatable=True, ondeactivated=ondeactivated, onactivated=onactivated)\n",
+    "s = sortableList.sortableList(items=items, width=400, maxheightlist=900, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, itemContent=itemContent,\n",
+    "                              bottomContent=[tooltip.tooltip(\"Remove all layers\",reset)], buttonstooltip=True, onremoving=onremoving, onremoved=onremoved, onadded=onadded,\n",
+    "                              tooltipadd='Add new layer', tooltipdown='Move layer down', tooltipup='Move layer up', tooltipremove='Remove layer',\n",
+    "                              activatable=True, ondeactivated=ondeactivated, onactivated=onactivated)\n",
     "s.active = 0\n",
     "s.draw()"
    ]
@@ -300,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
