--- a/src/vois/textpopupTest.ipynb
+++ b/src/vois/textpopupTest.ipynb
@@ -2,10 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "27e0b993",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0a798d69e2947d1b0717621b69bfd1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n.leaflet-div-icon { background-color: white; border-color: #bbbbbb; border-width: 1px; …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3f9565772e0414db340e1703a91dacb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[43.66737, 12.5504], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'z…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, HTML, CallbackDispatcher\n",
     "from ipyleaflet import Map\n",
@@ -15,6 +46,13 @@
     "\n",
     "m = Map(center=[43.66737, 12.5504], scroll_wheel_zoom=True, zoom=13)\n",
     "\n",
+    "display(HTML('''\n",
+    "<style>\n",
+    ".leaflet-div-icon { background-color: white; border-color: #bbbbbb; border-width: 1px; border-radius: 12px; }\n",
+    "</style>\n",
+    "'''))\n",
+    "\n",
+    "\n",
     "t = None\n",
     "def handle_interaction_popup(**kwargs):\n",
     "    global t\n",
@@ -23,9 +61,13 @@
     "        lat = kwargs.get('coordinates')[0]\n",
     "        lon = kwargs.get('coordinates')[1]\n",
     "\n",
-    "        textpopup.removeAll(m)\n",
-    "        t = textpopup(m, lat=lat, lon=lon, autoremovedelay=5.0,\n",
-    "                      width=340, height=None, titlewidth=70,\n",
+    "        #textpopup.removeAll(m)\n",
+    "        if t is not None:\n",
+    "            t.remove()\n",
+    "            \n",
+    "        t = textpopup(m, lat=lat, lon=lon, autoremovedelay=15.0,\n",
+    "                      width=390, height=None, \n",
+    "                      titlewidth=70,\n",
     "                      titles=['Pixel values', 'Class'],\n",
     "                      texts=['(120,34,189)', 'Woodland and Shrubland (incl. permanent crops)'],\n",
     "                      titlesbold=[],\n",
@@ -34,6 +76,8 @@
     "                      textfontsize=11,\n",
     "                      titlecolor='darkgreen',\n",
     "                      textcolor='darkred',\n",
+    "                      align='left',\n",
+    "                      margin=15\n",
     "                     )\n",
     "\n",
     "m._interaction_callbacks = CallbackDispatcher()\n",
@@ -49,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#t.remove()"
+    "t.remove()"
    ]
   },
   {
@@ -65,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ef40185",
+   "id": "ab386a8f-c041-487c-a926-4a0b295db8f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -87,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
