--- a/src/vois/vuetify/Tests/basemapsTest.ipynb
+++ b/src/vois/vuetify/Tests/basemapsTest.ipynb
@@ -2,38 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5ed8586f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08102255f3a344618c6616f4e2d32d25",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Card(children=[Html(children=[CustomTreeview(activatable=True, active=72, color='#f8bd1a', even…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "# Treeview to select the basemap for a ipyleaflet map instance\n",
     "from jeodpp import inter, imap\n",
     "from ipywidgets import widgets, Layout\n",
     "\n",
-    "%run basemaps.py\n",
+    "from vois.vuetify import basemaps\n",
     "\n",
     "height = 650\n",
     "\n",
     "m = imap.Map(layout=Layout(height='%dpx'%height))\n",
     "#m.layersControl()\n",
     "\n",
-    "b = basemaps(m, height=height, dark=False, removeBasemaps=['OpenStreetMap.HOT', 'MtbMap'])\n",
+    "b = basemaps.basemaps(m, height=height, dark=False, removeBasemaps=['OpenStreetMap.HOT', 'MtbMap'])\n",
     "\n",
     "widgets.HBox([b.draw(),m])"
    ]
@@ -42,7 +32,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "406570fc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "b.value"
@@ -50,9 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d6c805b9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "b.value = 'Esri.WorldImagery'"
@@ -60,9 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d0a4edd2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "b.value = 'BDAP.Elevation.Merit'"
@@ -72,7 +68,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f0e59382",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "type(b.current_layer)"
@@ -82,7 +80,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ca6f4ef",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "isinstance(b.current_layer, ipyleaflet.leaflet.TileLayer)"
@@ -140,9 +140,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
