--- a/src/vois/vuetify/Tests/sliderFloatTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderFloatTest.ipynb
@@ -3,6 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8b60b9f4-0aae-4450-b251-f32f491e20ea",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "157a1181",
    "metadata": {
     "tags": []
@@ -12,7 +24,7 @@
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run ../sliderFloat.py\n",
+    "from vois.vuetify import SliderFloat\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -20,8 +32,8 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, maxint=200, showpercentage=False, decimals=2,\n",
-    "                labelwidth=150, resetbutton=True, showtooltip=True, onchange=onchange, editable=True)\n",
+    "s = SliderFloat(1.8, text='Select Value in [1.0,3.0]:', min_value=1.0, max_value=3.0, max_int=200, show_percentage=False, decimals=2,\n",
+    "                label_width=150, reset_button=True, show_tooltip=True, on_change=onchange, editable=True)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -30,7 +42,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "881495cc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s.value = 2.35"
@@ -40,7 +54,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34af8333",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s.color = 'red'"
@@ -50,13 +66,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d849fb71",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run sliderFloat.py\n",
+    "from vois.vuetify import SliderFloat\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -64,8 +82,8 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(0.8, text='Fill opacity:', onchange=onchange)\n",
-    "display(s.draw())\n",
+    "s = SliderFloat(0.8, text='Fill opacity:', on_change=onchange)\n",
+    "display(s)\n",
     "display(output)"
    ]
   },
@@ -81,13 +99,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d2cb634",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run sliderFloat.py\n",
+    "from vois.vuetify import sliderFloat\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -95,7 +115,7 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(45.0, text='Select Value in [0.0,360.0]:', minvalue=0.0, maxvalue=360.0, maxint=360, showpercentage=False, decimals=0, labelwidth=200, onchange=onchange)\n",
+    "s = sliderFloat.sliderFloat(45.0, text='Select Value in [0.0,360.0]:', min_value=0.0, max_value=360.0, max_int=360, show_percentage=False, decimals=0, label_width=200, on_change=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -125,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
