--- a/src/vois/vuetify/Tests/labelTest.ipynb
+++ b/src/vois/vuetify/Tests/labelTest.ipynb
@@ -3,51 +3,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8aa4d62",
-   "metadata": {},
+   "id": "f6669ee6-51c9-4967-886a-3a673cc1b20d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run label.py\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8aa4d62",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from vois.vuetify import Label\n",
     "\n",
-    "l1 = label('July 2011 test long long long long long long long long long long long long label', textweight=450, height=22, tooltip='Example tooltip text')\n",
-    "l2 = label('Test label 2', textweight=300, margins=2, icon='mdi-car-light-high', iconcolor='red', iconsmall=False, height=22)\n",
+    "l1 = Label('July 2011 test long long  long long long label', text_weight=450, height=22, tooltip_text='Example tooltip text')\n",
+    "l2 = Label('Test label 2', text_weight=300, margins=2, icon='mdi-car-light-high', icon_color='red', icon_small=False, height=22)\n",
     "\n",
-    "display(l1.draw())\n",
-    "display(l2.draw())"
+    "display(l1)\n",
+    "display(l2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4d0c677",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import label\n",
+    "from vois.vuetify import Label\n",
     "\n",
-    "lab = label.label('Test label ', textweight=300, margins=2,\n",
-    "                  icon='mdi-car-light-high', iconcolor='red',\n",
-    "                  iconlarge=False, height=22)\n",
+    "lab = Label('Test label ', text_weight=300, margins=10,\n",
+    "                  icon='mdi-car-light-high', icon_color='red',\n",
+    "                  icon_large=False, height=50)\n",
     "\n",
-    "display(lab.draw())"
+    "display(lab)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "658ee370",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "lab.text = 'New text for the label'\n",
-    "display(lab.draw())\n",
+    "display(lab)\n",
     "print(lab.text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3271496d",
+   "id": "25a10118-40a4-4bd3-a776-4b446407cd6a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lab.text = 'New text for the label'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "787462fc-153b-4de6-a3d3-67815c1cde80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -69,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
