--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -153,7 +153,7 @@ IconClipboard widget
 label widget
 ------------
 
-.. automodule:: label
+.. automodule:: Label
     :members:
 
 .. image:: figures/line.png
