--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -79,7 +79,7 @@ DatePicker widget
 dayCalendar widget
 ------------------
 
-.. automodule:: dayCalendar
+.. automodule:: DayCalendar
     :members:
 
 .. image:: figures/line.png
