--- a/src/vois/vuetify/Tests/dayCalendarTest.ipynb
+++ b/src/vois/vuetify/Tests/dayCalendarTest.ipynb
@@ -3,14 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9ef71fa-d664-4285-939b-5df2d9577c71",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ef7ad46",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run dayCalendar.py\n",
+    "from vois.vuetify import DayCalendar\n",
     "\n",
     "out = widgets.Output()\n",
     "display(out)\n",
@@ -23,22 +37,24 @@
     "    with out:\n",
     "        print('Event: ',day)\n",
     "        \n",
-    "c = dayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-10', '2023-10-20'], show_count=True, on_click=on_click, on_click_event=on_click_event)\n",
+    "c = DayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-10', '2023-10-20'], show_count=True, on_click=on_click, on_click_event=on_click_event)\n",
     "\n",
-    "display(c.draw())"
+    "display(c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8698ed6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from datetime import datetime, date\n",
     "import dateutil.relativedelta\n",
     "\n",
-    "%run dayCalendar.py\n",
+    "from vois.vuetify import DayCalendar\n",
     "\n",
     "output = widgets.Output()\n",
     "display(output)\n",
@@ -65,15 +81,17 @@
     "start = '2023-10-07'\n",
     "end   = '2023-11-07'\n",
     "\n",
-    "c = dayCalendar(start=start, end=end, days=days, show_count=True, on_click=on_click)\n",
-    "display(c.draw())"
+    "c = DayCalendar(start=start, end=end, days=days, show_count=True, on_click=on_click)\n",
+    "display(c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f777c176",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.color = 'blue'"
@@ -83,7 +101,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fcdb9715",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.color "
@@ -93,7 +113,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "211dc7ec",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.days = ['2023-10-02', '2023-10-09', '2023-10-18']"
@@ -103,7 +125,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a6c0ffaa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.days"
@@ -112,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a70ee3ef",
+   "id": "0c382480-51dc-4486-85a1-0294964041c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
