--- a/src/vois/vuetify/Tests/toggleTest.ipynb
+++ b/src/vois/vuetify/Tests/toggleTest.ipynb
@@ -2,46 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d7b41f34",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86a9f8ab7d664ed3aff46b98e0e1ce74",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Col(children=[Button(children=[Container(children=[Tooltip(bottom=True, children=['Tooltip for label1'], color…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "620d438f42b3494aa19d731337bc0b23",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
     "\n",
-    "%run ../toggle.py\n",
+    "from vois.vuetify import Toggle\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -50,23 +21,23 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "t = toggle(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'], tooltips=['Tooltip for label1'], #xsmall=True, height=20,\n",
-    "           onchange=onchange, row=False, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
+    "t = Toggle(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'], tooltips=['Tooltip for label1'], #xsmall=True, height=20,\n",
+    "           on_change=onchange, row=False, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
     "\n",
-    "display(t.draw())\n",
+    "display(t)\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ff6f3339-1dd7-4f02-b2b8-f40f3e7a201e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "t.buttons[1].disabled = False"
+    "t.buttons[1].disabled = True"
    ]
   },
   {
@@ -78,10 +49,10 @@
    },
    "outputs": [],
    "source": [
-    "t = toggle(0, ['', '', ''], tooltips=['Tooltip for label1'], icons=['', '', ''],\n",
-    "           row=True, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
+    "t = Toggle(0, ['', '', ''], tooltips=['Tooltip for label1'], icons=['', '', ''],\n",
+    "           row=True, width=250, justify='start', rounded=False, outlined=False, dark=False, padding_col=1)\n",
     "\n",
-    "display(t.draw())"
+    "display(t)"
    ]
   },
   {
@@ -93,15 +64,17 @@
    },
    "outputs": [],
    "source": [
-    "t.colorselected   = '#ffdd00'\n",
-    "t.colorunselected = '#00ffdd'"
+    "t.color_selected   = '#ffde00'\n",
+    "t.color_unselected = '#00ffdd'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d9ebadc8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.value = 2"
@@ -111,11 +84,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "da728d3c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Tiled toggle (no space between buttons and buttons completely squared)\n",
-    "%run ../toggle.py\n",
+    "from vois.vuetify import toggle\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -126,10 +101,10 @@
     "    with output:\n",
     "        print(index)\n",
     "\n",
-    "t = toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
-    "           onchange=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0, tile=True)\n",
+    "t = Toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
+    "           on_change=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0, tile=True)\n",
     "\n",
-    "display(t.draw())\n",
+    "display(t)\n",
     "display(output)"
    ]
   },
@@ -149,11 +124,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4985f667-5317-4c4e-922c-167f235d3e27",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Icons toggle\n",
-    "%run ../toggle.py\n",
+    "from vois.vuetify import Toggle\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -164,11 +141,11 @@
     "    with output:\n",
     "        print(index)\n",
     "\n",
-    "t = toggle(0, ['', '', ''], icons=['mdi-file-word-box-outline', 'mdi-file-word-box', 'mdi-auto-fix'],\n",
+    "t = Toggle(0, ['', '', ''], icons=['mdi-file-word-box-outline', 'mdi-file-word-box', 'mdi-auto-fix'],\n",
     "           tooltips=['White text', 'Black text', 'Auto set text color'], dark=False,\n",
-    "           onchange=onchange, row=True, width=50, rounded=False, justify='start', paddingrow=1, tile=True)\n",
+    "           on_change=onchange, row=True, width=50, rounded=False, justify='start', padding_row=1, tile=True)\n",
     "\n",
-    "display(t.draw())\n",
+    "display(t)\n",
     "display(output)"
    ]
   },
@@ -176,7 +153,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4744d44b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.dark = True"
@@ -193,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -207,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
