--- a/src/vois/vuetify/Tests/basemapsTest.ipynb
+++ b/src/vois/vuetify/Tests/basemapsTest.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ed8586f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4655788e316247f88dcb9954d250c7b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Card(children=[Html(children=[CustomTreeview(activatable=True, active=72, color='#f8bd1a', even…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
